{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 149,
  "lineage": "27a380ab-11d7-c095-f42b-77b384c13e67",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a3add10195338ad",
            "arn": "arn:aws:ec2:us-east-1:624448302051:instance/i-0c8b5b00e8b252a66",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8b5b00e8b252a66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ddc7da3f011c83f9"
              }
            ],
            "primary_network_interface_id": "eni-0ddc7da3f011c83f9",
            "private_dns": "ip-10-0-1-49.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.49",
            "public_ip": "3.90.66.243",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a16316308b0e7167",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd770db7b0f100e5",
            "tags": {
              "Name": "pravesh-portfolio-instance"
            },
            "tags_all": {
              "Name": "pravesh-portfolio-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0726c51c0a416f782"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "624448302051",
            "id": "i-0c8b5b00e8b252a66",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.security_group.aws_security_group.web",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624448302051:security-group/sg-0726c51c0a416f782",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0726c51c0a416f782",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pravesh-portfolio-web-sg",
            "name_prefix": "",
            "owner_id": "624448302051",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pravesh-portfolio-web-sg"
            },
            "tags_all": {
              "Name": "pravesh-portfolio-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a40641a082d7b8b5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "624448302051",
            "id": "sg-0726c51c0a416f782",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624448302051:internet-gateway/igw-01bd81de3f11b0671",
            "id": "igw-01bd81de3f11b0671",
            "owner_id": "624448302051",
            "region": "us-east-1",
            "tags": {
              "Name": "pravesh-portfolio-igw"
            },
            "tags_all": {
              "Name": "pravesh-portfolio-igw"
            },
            "vpc_id": "vpc-0a40641a082d7b8b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624448302051:route-table/rtb-0beddaa3282948ba9",
            "id": "rtb-0beddaa3282948ba9",
            "owner_id": "624448302051",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bd81de3f11b0671",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pravesh-portfolio-public-rt"
            },
            "tags_all": {
              "Name": "pravesh-portfolio-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a40641a082d7b8b5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "624448302051",
            "id": "rtb-0beddaa3282948ba9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08de0c520c707ab8f",
            "region": "us-east-1",
            "route_table_id": "rtb-0beddaa3282948ba9",
            "subnet_id": "subnet-0bd770db7b0f100e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624448302051:subnet/subnet-0bd770db7b0f100e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd770db7b0f100e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "624448302051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pravesh-portfolio-subnet"
            },
            "tags_all": {
              "Name": "pravesh-portfolio-subnet"
            },
            "vpc_id": "vpc-0a40641a082d7b8b5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "624448302051",
            "id": "subnet-0bd770db7b0f100e5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624448302051:vpc/vpc-0a40641a082d7b8b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b4639ddd4361bbe",
            "default_route_table_id": "rtb-0602dca0441417a18",
            "default_security_group_id": "sg-0eef2ad9ca72c3efa",
            "dhcp_options_id": "dopt-0bfe8e393cd5493d7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a40641a082d7b8b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0602dca0441417a18",
            "owner_id": "624448302051",
            "region": "us-east-1",
            "tags": {
              "Name": "pravesh-portfolio-vpc"
            },
            "tags_all": {
              "Name": "pravesh-portfolio-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}